test/types/chplhashtable/mapOfDom.good
mapOfDom.chpl:3: error: Values of 'domain' type do not support hash functions yet
