test/types/chplhashtable/mapOfDom.chpl
use Map;

var m: map(domain(1), string);

writeln(m);
